--- a/src/index.scss
+++ b/src/index.scss
@@ -2,11 +2,11 @@
 
 // Colors
 
-$primary: #191435;
+$primary: #1a1919;
 $primary-dark: #0e0b1e;
-$secondary: #86d5b1;
-$white: #ebebeb;
-$accent: #a297d8;
+$secondary: #32e0c4;
+$white: #eeeeee;
+$accent: #2f89fc;
 $accent2: #5dd2e9;
 
 :root {
@@ -112,8 +112,6 @@ article {
 .paragraph {
   font-weight: 300;
 }
-
-
 
 // **
 // MEDIA QUERIES
