--- a/src/pages/help/Support.scss
+++ b/src/pages/help/Support.scss
@@ -1,10 +1,10 @@
 // Colors
 
-$primary: #191435;
+$primary: #1a1919;
 $primary-dark: #0e0b1e;
-$secondary: #86d5b1;
-$white: #ebebeb;
-$accent: #a297d8;
+$secondary: #32e0c4;
+$white: #eeeeee;
+$accent: #2f89fc;
 $accent2: #5dd2e9;
 
 // **
