--- a/src/pages/help/Faq.scss
+++ b/src/pages/help/Faq.scss
@@ -1,10 +1,10 @@
 // Colors
 
-$primary: #1a1919;
-$primary-dark: #0e0b1e;
+$primary: #0a0a0a;
+$primary-dark: #000000;
 $secondary: #32e0c4;
 $white: #eeeeee;
-$accent: #2f89fc;
+$accent: #d2e603;
 $accent2: #5dd2e9;
 
 // **
