--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -1,11 +1,4 @@
-// Colors
-
-$primary: #0a0a0a;
-$primary-dark: #000000;
-$secondary: #32e0c4;
-$white: #eeeeee;
-$accent: #d2e603;
-$accent2: #5dd2e9;
+@import "../variables";
 
 // **
 // FOOTER
