--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -2,7 +2,7 @@
 
 $primary: #0a0a0a;
 $primary-dark: #000000;
-$secondary: #32e0c4;
+$secondary: #2adfc1;
 $white: #eeeeee;
-$accent: #d2e603;
-$accent2: #ba52ed;
+$accent: #ba52ed;
+$accent2: #d2e603;
