--- a/src/components/Searchbar.scss
+++ b/src/components/Searchbar.scss
@@ -1,3 +1,9 @@
+@import "../variables";
+
+.searchbar {
+  flex-grow: 1;
+}
+
 .searchbar form {
   display: flex;
   align-items: center;
@@ -6,4 +12,10 @@
 .searchbar form label,
 .searchbar input {
   margin: 0;
+}
+
+.searchbar form input {
+  border: 2px solid $accent;
+  border-radius: 30px;
+  width: 80%;
 }
