Searchbar works now (still a little bug)
If we delete the search input all of  a sudden the data won't reset.

--- a/src/index.scss
+++ b/src/index.scss
@@ -178,3 +178,10 @@ article {
     margin: 0;
   }
 }
+
+@media (min-width: 1000px) {
+  .nav-logo {
+    display: block;
+    margin-right: 1rem;
+  }
+}
