--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -58,9 +58,9 @@ nav a:hover {
   background-color: rgba(10, 10, 10, 0.98);
   border: 2px solid $accent;
   gap: 0;
-  left: -100%;
+  left: -150%;
   top: 80px;
-  width: 90%;
+  width: 100%;
   transition: 0.8s;
   z-index: 100;
 }
@@ -71,7 +71,7 @@ nav a:hover {
 }
 
 .nav-list.active {
-  left: 5%;
+  left: 0;
 }
 
 .page-nav {
