--- a/src/index.scss
+++ b/src/index.scss
@@ -166,6 +166,14 @@ article {
   .overlay {
     font-size: 2rem;
   }
+
+  // Footer
+
+  .rawg-logo {
+    text-align: center;
+    width: 20%;
+    margin: 0 auto;
+  }
 }
 
 @media (min-width: 1000px) {
