added gamesgrid component, still working on it

--- a/src/index.scss
+++ b/src/index.scss
@@ -64,9 +64,16 @@ body {
 .padding-bot {
   padding-bottom: 1rem;
 }
+.padding-r {
+  padding-right: 1rem;
+}
 
 .margin-bot {
   margin-bottom: 1rem;
+}
+
+.margin-r {
+  margin-right: 1rem;
 }
 
 .btn {
@@ -88,6 +95,8 @@ body {
 .pos-relative {
   position: relative;
 }
+
+
 
 // **
 // MAIN
