added games grid component 1.0, committing to main

--- a/src/index.scss
+++ b/src/index.scss
@@ -96,8 +96,6 @@ body {
   position: relative;
 }
 
-
-
 // **
 // MAIN
 // **
@@ -174,6 +172,19 @@ article {
 
   .overlay {
     font-size: 2rem;
+  }
+
+  // GamesGrid
+
+  .games-grid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+  }
+
+  .game-card {
+    width: 30%;
   }
 
   // Footer
