--- a/src/components/GamesGrid.scss
+++ b/src/components/GamesGrid.scss
@@ -2,26 +2,57 @@
 
 .game-card {
   text-align: center;
-  margin-bottom: 2rem;
+  display: block;
+  margin-bottom: 1rem;
   color: $white;
 
   .game-card__bg {
-    min-height: 200px;
+    min-height: 150px;
     background-position: center;
     background-size: cover;
     border-radius: 10px 10px 0 0;
   }
 
   .game-card__info {
-    min-height: 150px;
+    min-height: 300px;
     background-color: $primary-dark;
-  }
+    border-radius: 0 0 10px 10px;
+    padding: 0 0.5rem;
 
-  .game-metacritic {
-    width: 15px;
-    height: 15px;
-    padding: 3px;
-    border-radius: 4px;
-    font-size: 0.8rem;
+    .game-title {
+      padding: 0.5rem 0;
+      border-bottom: 1px solid $secondary;
+    }
+
+    .game-metacritic {
+      font-weight: 200;
+      padding: 0.5rem 0;
+    }
+
+    .game-metacritic__vote {
+      border-radius: 4px;
+      padding: 1px 4px;
+      font-size: 0.8rem;
+      display: inline-block;
+      margin-left: 0.5rem;
+    }
+
+    .game-released {
+      font-weight: 200;
+    }
+
+    .platform {
+      display: inline-block;
+      font-weight: 100;
+      border: 1px solid $secondary;
+      border-radius: 2px;
+      padding: 4px;
+      font-size: 0.8rem;
+      margin-bottom: 0.5rem;
+    }
+
+    .platform + .platform {
+      margin-left: 0.5rem;
+    }
   }
 }
