Refactored and restyled the GameGrid component

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,7 +1,7 @@
 // Colors
 
-$primary: #0a0a0a;
-$primary-dark: #000000;
+$primary: #000000;
+$primary-dark: #0a0a0a;
 $secondary: #2adfc1;
 $white: #eeeeee;
 $accent: #ba52ed;
