--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 @import "./_variables";
+@import "./_media-queries";
 
 :root {
   font-family: "Poppins", Inter, Avenir, Helvetica, Arial, sans-serif;
@@ -12,6 +13,10 @@
   // -moz-osx-font-smoothing: grayscale;
   // -webkit-text-size-adjust: 100%;
 }
+
+// GLOBAL
+// GLOBAL
+// GLOBAL
 
 * {
   margin: 0;
@@ -39,9 +44,6 @@ body {
   background: $primary;
 }
 
-// **
-// REUSABLE
-// **
 .page-heading {
   color: $accent;
   font-size: 2rem;
@@ -96,9 +98,9 @@ body {
   position: relative;
 }
 
-// **
 // MAIN
-// **
+// MAIN
+// MAIN
 
 article {
   margin-bottom: 1rem;
@@ -106,103 +108,4 @@ article {
 
 .paragraph {
   font-weight: 300;
-}
-
-// **
-// MEDIA QUERIES
-// **
-
-@media (min-width: 400px) {
-  .row {
-    display: flex;
-    align-items: center;
-  }
-
-  // About
-
-  .testimonial {
-    text-align: left;
-    .testimonial-msg {
-      border-left: 1px solid $secondary;
-      margin-left: 1rem;
-      padding-left: 1rem;
-    }
-  }
-}
-
-@media (min-width: 800px) {
-  .container {
-    width: 70%;
-    max-width: 800px;
-    margin: 0 auto;
-  }
-
-  // Navbar
-  .nav-list {
-    position: unset;
-    flex-direction: row;
-    background-color: transparent;
-    width: auto;
-    border: none;
-  }
-
-  .nav-link {
-    padding: 0;
-
-    &.active {
-      color: $white;
-      border-bottom: 2px solid $white;
-    }
-  }
-
-  .nav-link + .nav-link {
-    margin-left: 1rem;
-  }
-
-  .hamburger {
-    display: none;
-    cursor: pointer;
-  }
-
-  .nav-branding {
-    display: none;
-  }
-
-  // Hero
-
-  .overlay {
-    font-size: 2rem;
-  }
-
-  // GamesGrid
-
-  .games-grid {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 10px;
-  }
-
-  .game-card {
-    width: 30%;
-  }
-
-  // Footer
-
-  .rawg-logo {
-    text-align: center;
-    width: 20%;
-    margin: 0 auto;
-  }
-}
-
-@media (min-width: 1000px) {
-  .nav-logo {
-    display: block;
-    margin-right: 1rem;
-  }
-
-  .nav-logo__alt {
-    display: none;
-  }
 }
