--- a/src/index.scss
+++ b/src/index.scss
@@ -78,13 +78,20 @@ body {
   margin-right: 1rem;
 }
 
+.btn-container {
+  text-align: center;
+  button a {
+    color: $white;
+  }
+}
+
 .btn {
   text-align: center;
   padding: 0.5rem 0.5rem;
   background-color: $primary-dark;
   font-family: inherit;
   color: $white;
-  width: 6rem;
+  min-width: 6rem;
   border: 2px solid $accent;
   border-radius: 30px;
   cursor: pointer;
