Added netlify.toml file

--- a/src/pages/games/GameDetails.scss
+++ b/src/pages/games/GameDetails.scss
@@ -55,7 +55,12 @@
         }
 
         span::after {
-          content: " ";
+          content: ", ";
+          color: $secondary;
+        }
+
+        span:last-child::after {
+          content: "";
         }
       }
     }
