added color to reddit's icon

--- a/src/pages/games/GameDetails.scss
+++ b/src/pages/games/GameDetails.scss
@@ -55,8 +55,8 @@
         }
 
         span::after {
-          content: ", ";
-          color: $secondary;
+          content: " | ";
+          color: $accent;
         }
 
         span:last-child::after {
