--- a/src/components/GameStores.scss
+++ b/src/components/GameStores.scss
@@ -10,4 +10,11 @@
     font-weight: 100;
     color: $white;
   }
+
+  .url span {
+    font-size: 1rem;
+    font-weight: 100;
+    position: relative;
+    bottom: 6px;
+  }
 }
