--- a/src/_media-queries.scss
+++ b/src/_media-queries.scss
@@ -63,11 +63,10 @@
   }
 
   .nav-link {
-    padding: 0;
+    padding: 5px;
 
     &.active {
-      color: $white;
-      border-bottom: 2px solid $white;
+      color: $accent;
     }
   }
 
