--- a/src/pages/signup/Signup.scss
+++ b/src/pages/signup/Signup.scss
@@ -1,8 +1,18 @@
 @import "../../variables";
 
 .signup-form {
+  width: 100%;
+  max-width: 500px;
+  padding: 2rem 0;
+
+  label {
+    font-weight: 200;
+  }
+
   input {
     background-color: $primary-dark;
+    color: $accent;
+    width: 100%;
 
     &:focus {
       background-color: $primary-dark;
