minor css changes

--- a/src/components/Searchbar.scss
+++ b/src/components/Searchbar.scss
@@ -19,4 +19,12 @@
   background-color: $primary;
   border-radius: 30px;
   width: 90%;
+
+  &:focus {
+    background-color: $primary-dark;
+  }
+
+  &:focus-visible {
+    outline: 0px solid $accent;
+  }
 }
